# KnowledgeGraph_Program

./: .gitignore  README.md  requirements.txt  test_connection.py
TN_FarmersScheme_KGRAG_Assingment/: .env.example  .gitignore  README.md  app.py  config.py  pyproject.toml  rag_pipeline.py  requirements.txt  scraper.py
TN_FarmersScheme_KGRAG_Assingment/.streamlit/: config.toml
TN_FarmersScheme_KGRAG_Assingment/data/: neo4j_metadata.json  schemes.csv  schemes.json
TN_FarmersScheme_KGRAG_Assingment/faiss_index/: index.faiss  index.pkl  index_metadata.json
TN_FarmersScheme_KGRAG_Assingment/test/: test_api.py  test_ui.py
